--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -28,14 +28,12 @@
                     <p class="feature_main_para">Login with you preference, your information is save with us.</p>
                     <p class="d-sm-none">Login with you preference.</p>
                     <div class="oauth_container">
-                        <div class="oauth facebook">
-                            <a href="/auth/facebook" class="btn">Facebook</a>
-                            <i class="fab fa-facebook-f"></i>
-                        </div>
-                        <div class="oauth google">
-                            <a href="/auth/google" class="btn">Google</a>
-                            <i class="fab fa-google-plus-g"></i>
-                        </div>
+                        <a href="/oauth/facebook" class="oauth facebook">
+                            <div class="btn">Facebook</div><i class="fab fa-facebook-f"></i>
+                        </a>
+                        <a href="/oauth/google" class="oauth google">
+                            <div class="btn">Google</div><i class="fab fa-google-plus-g"></i>
+                        </a>
                     </div>
                     <h5>or</h5>
                 </div>
