--- a/views/chat.handlebars
+++ b/views/chat.handlebars
@@ -1,4 +1,3 @@
-
 <section id="chat_container">
     <div class="menuBackground menu_container">
         <div class="menu_options menu_option_toggle">
@@ -7,11 +6,12 @@
                 <i class="menu_dots fas fa-times vertical-center"></i>
             </div>
             <ul>
-                <li>Profile</li>
-                <li>All Friend</li>
-                <li>Requests</li>
-                <li>Search</li>
-                <li>Logout</li>
+
+                <li><a href="#">Profile</a></li>
+                <li><a href="#">All Friend</a></li>
+                <li><a href="#">Requests</a></li>
+                <li><a href="/find">Search</a></li>
+                <li><a href="/logout">Logout</a></li>
             </ul>
 
         </div>
