--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -16,7 +16,7 @@
                 {{!-- flash --}}
                 {{#if flash.danger}}
                 <div class="alert alert-danger text-center mx-auto" role="alert" style="width:350px">
-                    {{flash.danger}}
+                    {{{flash.danger}}}
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                         <i class="fas fa-times noHover"></i>
                     </button>
