--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -6,7 +6,7 @@
                 {{!-- alert --}}
                 {{#if flash.success}}
                 <div class="alert alert-success text-center mx-auto" role="alert" style="width:350px">
-                    {{flash.success}}
+                    {{{flash.success}}}
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                         <i class="fas fa-times noHover"></i>
                     </button>
