modifying with svg

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -184,8 +184,7 @@
                                 <div class="col-md-9 col-7 m-auto">
                                     <div class="info_text">
                                         <h5>Free Support</h5>
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur,
-                                            quos?</p>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, quos?</p>
                                     </div>
                                 </div>
                             </div>
@@ -228,7 +227,7 @@
                     </li>
                 </ul>
                 <div class="col-md-6 text-center">
-                    <img class="about-img bannerImage" src="/images/four.png" alt="Use Image">
+                    <img class="about-img bannerImage" src="/images/getStarted.svg" alt="Use Image">
                 </div>
             </div>
         </div>
