linked privacy page with home ancor button

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -110,7 +110,7 @@
                         <div class="col-lg-6 col-sm-12 text-center d-sm-block d-none">
                             <ul class="mb-0 pl-0">
                                 <li class="pl-0">Terms & Condition</li>
-                                <li>Privacy Policy</li>
+                                <a href="/pirvacy-policy" ><li>Privacy Policy</li></a>
                                 <li>Help</li>
                             </ul>
                         </div>
