fixed few deprecated bugs

--- a/views/chat.handlebars
+++ b/views/chat.handlebars
@@ -39,8 +39,8 @@
                             </div>
                             <div class="col-9 m-auto pl-0">
                                 <div class="friend_data_thumb">
-                                    <h5>Matt</h5>
-                                    <p>5 Bucks <span class="float-right">09:10</span></p>
+                                    <h5>Sumit</h5>
+                                    <p>I remember <span class="float-right">09:10</span></p>
                                 </div>
                             </div>
                         </div>
@@ -52,8 +52,8 @@
                             </div>
                             <div class="col-9 m-auto pl-0">
                                 <div class="friend_data_thumb">
-                                    <h5>Matt</h5>
-                                    <p>5 Bucks <span class="float-right">09:10</span></p>
+                                    <h5>Bhupender</h5>
+                                    <p>Looking for that <span class="float-right">09:10</span></p>
                                 </div>
                             </div>
                         </div>
@@ -65,7 +65,7 @@
                             </div>
                             <div class="col-9 m-auto pl-0">
                                 <div class="friend_data_thumb">
-                                    <h5>Matt <span class="badge badge-success message-number">5</span></h5>
+                                    <h5>Dheeraj <span class="badge badge-success message-number">5</span></h5>
                                     <p class="unreadMessage_thumb">5 Bucks <span class="time_thumb float-right">09:10</span></p>
                                 </div>
                             </div>
@@ -78,8 +78,8 @@
                             </div>
                             <div class="col-9 m-auto pl-0">
                                 <div class="friend_data_thumb">
-                                    <h5>Matt</h5>
-                                    <p>5 Bucks <span class="float-right">09:10</span></p>
+                                    <h5>Alisa</h5>
+                                    <p>Party ? <span class="float-right">08:40</span></p>
                                 </div>
                             </div>
                         </div>
@@ -91,8 +91,8 @@
                             </div>
                             <div class="col-9 m-auto pl-0">
                                 <div class="friend_data_thumb">
-                                    <h5>Matt</h5>
-                                    <p>5 Bucks <span class="float-right">09:10</span></p>
+                                    <h5>Monika</h5>
+                                    <p>Kab aaoge <span class="float-right">07:15</span></p>
                                 </div>
                             </div>
                         </div>
